--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Oswald">
 
   </head>
   <body>
@@ -58,7 +60,7 @@
 
     <!-- Knockout.js -->
     <script src="js/lib/knockout.min.js"></script>
-    <script src="js/data.js"></script>
+    <script src="js/crimes.js"></script>
     <script src="js/main.js"></script>
     <script async defer
       src="https://maps.googleapis.com/maps/api/js?libraries=places,drawing,geometry&key=AIzaSyAxvlUJa8lIo1GIldft5bAwrxFXLJZq70M&callback=initMap" onerror="googleMapsError()">
